--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -39,6 +39,7 @@
     
     
     <main>
+        <p>cool</p>
         <section class="hero-section">
             <img src="../assets/Blog-posts-img/dino-reichmuth-A5rCN8626Ck-unsplash.jpg" alt="Seaplane on beach" class="hero-image">
             <div class="hero-overlay">
