--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <p>hei</p>
     <header>
         <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
         <nav class="menu">
