--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="guide-content">
                 <h3>The ultimate guide for traveling to Norway</h3>
                 <p>Majestic fjords, dramatic mountain ranges, and endless natural beauty. From the iconic Northern Lights to the midnight sun</p>
-                <a href="/HTML/guide.html"><button>View Guide</button></a>
+                <a href="./HTML/guide.html"><button>View Guide</button></a>
             </div>
         </div>
     </main>
