--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="text-blog">
             <div class="text-blog-header">
                 <h2>Blog posts</h2>
-                <a href="/HTML/all-posts.html" class="view-all-button">View All</a>
+                <a href="./HTML/all-posts.html" class="view-all-button">View All</a>
             </div>
             <div id="blogContainer"></div> 
         </div>
