--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/styles.css">
-    <link rel="stylesheet" href="./CSS/all-posts.css">
-    <link rel="stylesheet" href="./CSS/header.css">
-    <link rel="stylesheet" href="./CSS/footer.css">
-    <script defer type="module" src="/JS/all-posts.js"></script>
-    <script defer type="module" src="/JS/fetchData.js"></script>
-    <script defer type="module" src="/JS/one-post.js"></script>
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/all-posts.css">
+    <link rel="stylesheet" href="../CSS/header.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
+    <script defer type="module" src="./JS/all-posts.js"></script>
+    <script defer type="module" src="./JS/fetchData.js"></script>
+    <script defer type="module" src="./JS/one-post.js"></script>
 </head>
 <body>
     <header>
@@ -40,7 +40,7 @@
     
     <main>
         <section class="hero-section">
-            <img src="../assets/Blog-posts-img/dino-reichmuth-A5rCN8626Ck-unsplash.jpg" alt="Seaplane on beach" class="hero-image">
+            <img src="../assets/blogposts.jpg" alt="Seaplane on beach" class="hero-image">
             <div class="hero-overlay">
                 <h2>Blog posts</h2>
             </div>
