--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -12,9 +12,8 @@
     <link rel="stylesheet" href="../CSS/all-posts.css">
     <link rel="stylesheet" href="../CSS/header.css">
     <link rel="stylesheet" href="../CSS/footer.css">
-    <script defer type="module" src="./JS/all-posts.js"></script>
-    <script defer type="module" src="./JS/fetchData.js"></script>
-    <script defer type="module" src="./JS/one-post.js"></script>
+    <script defer type="module" src="/JS/all-posts.js"></script>
+    
 </head>
 <body>
     <header>
