--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
         <div class="text-blog">
             <div class="text-blog-header">
                 <h2>Blog posts</h2>
-                <a href="./HTML/all-posts.html" class="view-all-button">View All</a>
+                <a href="/HTML/all-posts.html" class="view-all-button">View All</a>
             </div>
             <div id="blogContainer"></div> 
         </div>
 
         <div class="guide-card">
             <div class="guide-image">
-                <img src="./assets/norwayfront.jpg" alt="Scenic view of Norway">
+                <img src="/assets/norwayfront.jpg" alt="Scenic view of Norway">
             </div>
             <div class="guide-content">
                 <h3>The ultimate guide for traveling to Norway</h3>
                 <p>Majestic fjords, dramatic mountain ranges, and endless natural beauty. From the iconic Northern Lights to the midnight sun</p>
-                <a href="./HTML/guide.html"><button>View Guide</button></a>
+                <a href="/HTML/guide.html"><button>View Guide</button></a>
             </div>
         </div>
     </main>
