--- a/HTML/one-post.html
+++ b/HTML/one-post.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
+        <h1 class="logo"><a href="../index.html">Whispers of the World</a></h1>
         <nav class="menu">
             <a href="/blog.html">Blog</a>
             <a href="/about.html">About</a>
