--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../CSS/all-posts.css">
     <link rel="stylesheet" href="../CSS/header.css">
     <link rel="stylesheet" href="../CSS/footer.css">
-    <script defer type="module" src="/JS/all-posts.js"></script>
+    <script defer type="module" src="../JS/all-posts.js"></script>
     
 </head>
 <body>
