--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <div class="guide-card">
             <div class="guide-image">
-                <img src="/assets/norwayfront.jpg" alt="Scenic view of Norway">
+                <img src="./assets/norwayfront.jpg" alt="Scenic view of Norway">
             </div>
             <div class="guide-content">
                 <h3>The ultimate guide for traveling to Norway</h3>
