--- a/account/login.html
+++ b/account/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
+        <h1 class="logo"><a href="https://t0nj3.github.io/project-exam-T0nj3-1/index.html">Whispers of the World</a></h1>
         <nav class="menu">
             <a href="/blog.html">Blog</a>
             <a href="/about.html">About</a>
