--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-    <script defer src="./JS/header.js"></script>
+    <script defer src="./JS/slider.js"></script>
     <script defer type="module" src="./JS/script.js"></script>
     <script defer type="module" src="./JS/fetchData.js"></script>
 </head>
