--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
         <div class="popular-posts-section">
             <h2>Popular Posts</h2>
-            <div class="popular-posts"></div>
+            <div class="popular-posts" id="popularPostsContainer"></div>
         </div>
         
         <div class="latest-travels-dynamic">
