--- a/HTML/one-post.html
+++ b/HTML/one-post.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../CSS/one-post.css">
     <link rel="stylesheet" href="../CSS/header.css">
     <link rel="stylesheet" href="../CSS/footer.css">
-    <script defer type="module" src="../JS/post-details.js"></script>
+    <script defer src="../JS/all-posts.js"></script>
 </head>
 <body>
     <header>
