--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
         <nav class="menu">
-            <a href="/blog.html">Blog</a>
+            <a href="./HTML/all-posts.html">Blog</a>
             <a href="/about.html">About</a>
             <a href="./account/login.html">Login</a>
         </nav>
