--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -17,25 +17,24 @@
 </head>
 <body>
     <header>
-        <h1 class="logo"><a href="../index.html">Whispers of the World</a></h1>
+        <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
         <nav class="menu">
-            <a href="/blog.html">Blog</a>
-            <a href="/about.html">About</a>
-            <a href="/login.html">Login</a>
+            <a href="../HTML/all-posts.html">Blog</a>
+            <a href="../about.html">About</a>
+            <a href=".../account/login.html">Login</a>
         </nav>
-        <div class="hamburger" onclick="toggleMenu()">
+        <div class="hamburger">
             <span></span>
             <span></span>
             <span></span>
         </div>
-        <div class="side-menu" id="sideMenu">
-            <span class="close" onclick="toggleMenu()">&times;</span>
-            <a href="/blog.html">Blog</a>
-            <a href="/about.html">About</a>
-            <a href="/login.html">Login</a>
+        <div class="side-menu" id="sideMenu" style="display: none;">
+            <span class="close">&times;</span>
+            <a href="../HTML/all-posts.html">Blog</a>
+            <a href="">About</a>
+            <a href="../account/login.html">Login</a>
         </div>
     </header>
-    
     
     <main>
         <section class="hero-section">
@@ -107,7 +106,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="../JS/hamburger.js"></script>
 </body>
 </html>
 
