--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <script defer src="./JS/slider.js"></script>
     <script defer type="module" src="./JS/script.js"></script>
+    
 </head>
 
 <body>
@@ -23,16 +24,16 @@
             <a href="/about.html">About</a>
             <a href="./account/login.html">Login</a>
         </nav>
-        <div class="hamburger" onclick="toggleMenu()">
+        <div class="hamburger">
             <span></span>
             <span></span>
             <span></span>
         </div>
-        <div class="side-menu" id="sideMenu">
-            <span class="close" onclick="toggleMenu()">&times;</span>
-            <a href="/blog.html">Blog</a>
-            <a href="/about.html">About</a>
-            <a href="/login.html">Login</a>
+        <div class="side-menu" id="sideMenu" style="display: none;">
+            <span class="close">&times;</span>
+            <a href="./HTML/all-posts.html">Blog</a>
+            <a href="">About</a>
+            <a href="./account/login.html">Login</a>
         </div>
     </header>
     
@@ -138,6 +139,7 @@
             </div>
         </div>
     </footer>
+    <script src="./JS/hamburger.js"></script>
 </body>
 </html>
 
