--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -21,7 +21,7 @@
         <nav class="menu">
             <a href="../HTML/all-posts.html">Blog</a>
             <a href="../about.html">About</a>
-            <a href=".../account/login.html">Login</a>
+            <a href="../account/login.html">Login</a>
         </nav>
         <div class="hamburger">
             <span></span>
