--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="carousel-text">
                 <h1>Let's Wander Together.</h1>
                 <p>Join me as I share personal stories from my travels around the world.</p>
-                <a href="#" class="explore-button">Explore</a>
+                <a href="../HTML/all-posts.html" class="explore-button">Explore</a>
             </div>
         </div>
 
