--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -51,6 +51,8 @@
             <button class="filter-btn" data-continent="Europe">Europe</button>
             <button class="filter-btn" data-continent="Oceania">Oceania</button>
             <button class="filter-btn" data-continent="South America">South America</button>
+            <button class="filter-btn" data-continent="South America">North America</button>
+
           </section>
           
           <div class="hamburger-menu" id="hamburgerMenu">
