update about page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
         <nav class="menu">
             <a href="./HTML/all-posts.html">Blog</a>
-            <a href="/about.html">About</a>
+            <a href="/HTML/about.html">About</a>
             <a href="./account/login.html">Login</a>
         </nav>
         <div class="hamburger">
