correct pathnames in header

--- a/HTML/one-post.html
+++ b/HTML/one-post.html
@@ -18,9 +18,9 @@
     <header>
         <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
         <nav class="menu">
-            <a href="../HTML/all-posts.html">Blog</a>
-            <a href="../about.html">About</a>
-            <a href=".../account/login.html">Login</a>
+            <a href="all-posts.html">Blog</a>
+            <a href="about.html">About</a>
+            <a href="../account/login.html">Login</a>
         </nav>
         <div class="hamburger">
             <span></span>
@@ -29,8 +29,8 @@
         </div>
         <div class="side-menu" id="sideMenu" style="display: none;">
             <span class="close">&times;</span>
-            <a href="../HTML/all-posts.html">Blog</a>
-            <a href="">About</a>
+            <a href="all-posts.html">Blog</a>
+            <a href="about.html">About</a>
             <a href="../account/login.html">Login</a>
         </div>
     </header>
