corrected pathnames on all-posts

--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -19,8 +19,8 @@
     <header>
         <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
         <nav class="menu">
-            <a href="../HTML/all-posts.html">Blog</a>
-            <a href="../about.html">About</a>
+            <a href="all-posts.html">Blog</a>
+            <a href="about.html">About</a>
             <a href="../account/login.html">Login</a>
         </nav>
         <div class="hamburger">
