--- a/HTML/about.html
+++ b/HTML/about.html
@@ -71,6 +71,6 @@
                 </div>
             </div>
         </footer>
-       
+        <script src="../JS/hamburger.js"></script>
 </body>
 </html>
