--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <script defer src="./JS/slider.js"></script>
     <script defer type="module" src="./JS/script.js"></script>
+    <script defer type="module" src="./JS/search.js"></script>
     
 </head>
 
 <body>
+
     <header>
         <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
+        <div class="search-bar search-bar-desktop">
+            <input type="text" id="searchInputDesktop" placeholder="Search posts..." autocomplete="off" />
+            <div id="suggestionsDesktop" class="suggestions"></div>
+        </div>
         <nav class="menu">
             <a href="./HTML/all-posts.html">Blog</a>
             <a href="/HTML/about.html">About</a>
@@ -29,8 +35,12 @@
             <span></span>
             <span></span>
         </div>
-        <div class="side-menu" id="sideMenu" style="display: none;">
+        <div class="side-menu" id="sideMenu">
             <span class="close">&times;</span>
+            <div class="search-bar search-bar-hamburger">
+                <input type="text" id="searchInputHamburger" placeholder="Search posts..." autocomplete="off" />
+                <div id="suggestionsHamburger" class="suggestions"></div>
+            </div>
             <a href="./HTML/all-posts.html">Blog</a>
             <a href="">About</a>
             <a href="./account/login.html">Login</a>
