--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/styles.css">
-    <link rel="stylesheet" href="../CSS/all-posts.css">
-    <link rel="stylesheet" href="../CSS/header.css">
-    <link rel="stylesheet" href="../CSS/footer.css">
-    <script defer type="module" src="../JS/all-posts.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/all-posts.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <script defer type="module" src="../js/all-posts.js"></script>
     
 </head>
 <body>
@@ -30,8 +30,8 @@
         </div>
         <div class="side-menu" id="sideMenu" style="display: none;">
             <span class="close">&times;</span>
-            <a href="../HTML/all-posts.html">Blog</a>
-            <a href="">About</a>
+            <a href="../html/all-posts.html">Blog</a>
+            <a href="../html/about.html">About</a>
             <a href="../account/login.html">Login</a>
         </div>
     </header>
@@ -110,7 +110,7 @@
             </div>
         </div>
     </footer>
-    <script src="../JS/hamburger.js"></script>
+    <script src="../js/hamburger.js"></script>
 </body>
 </html>
 
