--- a/account/register.html
+++ b/account/register.html
@@ -8,9 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../CSS/registrer.css">
-    <link rel="stylesheet" href="../CSS/header.css">
-    <link rel="stylesheet" href="../CSS/footer.css">
+  <link rel="stylesheet" href="../css/registrer.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
 </head>
 <body>
   <header>
@@ -18,7 +18,7 @@
     <nav class="menu">
         <a href="/blog.html">Blog</a>
         <a href="/about.html">About</a>
-        <a href="./account/login.html">Login</a>
+        <a href="login.html">Login</a>
     </nav>
     <div class="hamburger" onclick="toggleMenu()">
         <span></span>
@@ -72,7 +72,7 @@
       </div>
   </div>
 </footer>
-  <script src="../JS/register.js"></script>
+  <script src="../js/register.js"></script>
 </body>
 </html>
 
