--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Blog</title>
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="CSS/header.css">
-    <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-    <script defer src="./JS/slider.js"></script>
-    <script defer type="module" src="./JS/script.js"></script>
-    <script defer type="module" src="./JS/search.js"></script>
+    <script defer src="./js/slider.js"></script>
+    <script defer type="module" src="./js/script.js"></script>
+    <script defer type="module" src="./js/search.js"></script>
     
 </head>
 
@@ -26,8 +26,8 @@
             <div id="suggestionsDesktop" class="suggestions"></div>
         </div>
         <nav class="menu">
-            <a href="./HTML/all-posts.html">Blog</a>
-            <a href="/HTML/about.html">About</a>
+            <a href="./html/all-posts.html">Blog</a>
+            <a href="./html/about.html">About</a>
             <a href="./account/login.html">Login</a>
         </nav>
         <div class="hamburger">
@@ -41,8 +41,8 @@
                 <input type="text" id="searchInputHamburger" placeholder="Search posts..." autocomplete="off" />
                 <div id="suggestionsHamburger" class="suggestions"></div>
             </div>
-            <a href="./HTML/all-posts.html">Blog</a>
-            <a href="">About</a>
+            <a href="./html/all-posts.html">Blog</a>
+            <a href="./html/about.html">About</a>
             <a href="./account/login.html">Login</a>
         </div>
     </header>
@@ -63,7 +63,7 @@
             <div class="carousel-text">
                 <h1>Let's Wander Together.</h1>
                 <p>Join me as I share personal stories from my travels around the world.</p>
-                <a href="../HTML/all-posts.html" class="explore-button">Explore</a>
+                <a href="../html/all-posts.html" class="explore-button">Explore</a>
             </div>
         </div>
 
@@ -112,13 +112,13 @@
         <div class="text-blog">
             <div class="text-blog-header">
                 <h2>Blog posts</h2>
-                <a href="./HTML/all-posts.html" class="view-all-button">View All</a>
+                <a href="./html/all-posts.html" class="view-all-button">View All</a>
             </div>
             <div id="blogContainer"></div> 
         </div>
 
         <div class="guide-card">
-            <a href="./HTML/guide.html">
+            <a href="./html/guide.html">
             <div class="guide-image">
                 <img src="./assets/norwayfront.jpg" alt="Scenic view of Norway">
             </div>
@@ -126,7 +126,7 @@
             <div class="guide-content">
                 <h3>The ultimate guide for traveling to Norway</h3>
                 <p>Majestic fjords, dramatic mountain ranges, and endless natural beauty. From the iconic Northern Lights to the midnight sun</p>
-                <a href="./HTML/guide.html"><button>View Guide</button></a>
+                <a href="./html/guide.html"><button>View Guide</button></a>
             </div>
         </div>
     </main>
@@ -151,7 +151,7 @@
             </div>
         </div>
     </footer>
-    <script src="./JS/hamburger.js"></script>
+    <script src="./js/hamburger.js"></script>
 </body>
 </html>
 
