--- a/HTML/about.html
+++ b/HTML/about.html
@@ -8,16 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/about.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/CSS/about.css">
+    <link rel="stylesheet" href="/CSS/header.css">
+    <link rel="stylesheet" href="/CSS/footer.css">
 </head>
 <body>
    
     <header>
         <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
         <nav class="menu">
-            <a href="/html/all-posts.html">Blog</a>
+            <a href="/HTML/all-posts.html">Blog</a>
             <a href="about.html">About</a>
             <a href="/account/login.html">Login</a>
         </nav>
@@ -28,7 +28,7 @@
         </div>
         <div class="side-menu" id="sideMenu" style="display: none;">
             <span class="close">&times;</span>
-            <a href="./html/all-posts.html">Blog</a>
+            <a href="./HTML/all-posts.html">Blog</a>
             <a href="">About</a>
             <a href="./account/login.html">Login</a>
         </div>
@@ -71,6 +71,6 @@
                 </div>
             </div>
         </footer>
-        <script src="../js/hamburger.js"></script>
+        <script src="../JS/hamburger.js"></script>
 </body>
 </html>
