--- a/HTML/guide.html
+++ b/HTML/guide.html
@@ -106,7 +106,7 @@
             </div>
         </div>
     </footer>
-    <script src="./js/hamburger.js"></script>
+    <script src="./JS/hamburger.js"></script>
 
 </body>
 </html>
