--- a/HTML/map.html
+++ b/HTML/map.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Map</title>
-    <link rel="stylesheet" href="../css/globe.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../CSS/globe.css">
+    <link rel="stylesheet" href="../CSS/header.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css">
-    <script type="module" src="../js/globe.js"></script>
-    <script type="module" src="../js/hamburger.js"></script>
+    <script type="module" src="../JS/globe.js"></script>
+    <script type="module" src="../JS/hamburger.js"></script>
 </head>
 <body>
     <header>
@@ -26,7 +26,7 @@
         </div>
         <div class="side-menu" id="sideMenu" style="display: none;">
             <span class="close">&times;</span>
-            <a href="../html/all-posts.html">Blog</a>
+            <a href="../HTML/all-posts.html">Blog</a>
             <a href="">About</a>
             <a href="../account/login.html">Login</a>
         </div>
