--- a/HTML/one-post.html
+++ b/HTML/one-post.html
@@ -8,10 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/one-post.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <script type="module" src="../js/post-details.js"></script>
+    <link rel="stylesheet" href="../CSS/one-post.css">
+    <link rel="stylesheet" href="../CSS/header.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
+    <script type="module" src="../JS/post-details.js"></script>
 </head>
 <body>
    
@@ -79,6 +79,6 @@
             </div>
         </div>
     </footer>
-    <script src="../js/hamburger.js"></script>
+    <script src="../JS/hamburger.js"></script>
 </body>
 </html>
