added map to header

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
         <nav class="menu">
             <a href="./HTML/all-posts.html">Blog</a>
+            <a href="./HTML/map.html" class="map-link">Map</a>  
             <a href="/HTML/about.html">About</a>
             <a href="./account/login.html">Login</a>
         </nav>
@@ -42,6 +43,7 @@
                 <div id="suggestionsHamburger" class="suggestions"></div>
             </div>
             <a href="./HTML/all-posts.html">Blog</a>
+            <a href="./HTML/map.html">Map</a> 
             <a href="">About</a>
             <a href="./account/login.html">Login</a>
         </div>
