--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <script defer src="./JS/slider.js"></script>
-    <script defer type="module" src="./JS/script.js"></script>
-    <script defer type="module" src="./JS/search.js"></script>
-    
+    <script type="module" src="./JS/script.js"></script>
+    <script type="module" src="./JS/search.js"></script>
 </head>
-
 <body>
-
     <header>
         <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
         <div class="search-bar search-bar-desktop">
-            <input type="text" id="searchInputDesktop" placeholder="Search posts..." autocomplete="off" />
+            <input type="text" id="searchInputDesktop" placeholder="Search posts..." autocomplete="off">
             <div id="suggestionsDesktop" class="suggestions"></div>
         </div>
         <nav class="menu">
@@ -39,7 +36,7 @@
         <div class="side-menu" id="sideMenu">
             <span class="close">&times;</span>
             <div class="search-bar search-bar-hamburger">
-                <input type="text" id="searchInputHamburger" placeholder="Search posts..." autocomplete="off" />
+                <input type="text" id="searchInputHamburger" placeholder="Search posts..." autocomplete="off">
                 <div id="suggestionsHamburger" class="suggestions"></div>
             </div>
             <a href="./HTML/all-posts.html">Blog</a>
