--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -12,14 +12,15 @@
     <link rel="stylesheet" href="../CSS/all-posts.css">
     <link rel="stylesheet" href="../CSS/header.css">
     <link rel="stylesheet" href="../CSS/footer.css">
-    <script defer type="module" src="../JS/all-posts.js"></script>
+    <script type="module" src="../JS/all-posts.js"></script>
+    <script type="module" src="../JS/search.js"></script>
     
 </head>
 <body>
     <header>
         <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
         <div class="search-bar search-bar-desktop">
-            <input type="text" id="searchInputDesktop" placeholder="Search posts..." autocomplete="off" />
+            <input type="text" id="searchInputDesktop" placeholder="Search posts..." autocomplete="off">
             <div id="suggestionsDesktop" class="suggestions"></div>
         </div>
         <nav class="menu">
@@ -36,7 +37,7 @@
         <div class="side-menu" id="sideMenu">
             <span class="close">&times;</span>
             <div class="search-bar search-bar-hamburger">
-                <input type="text" id="searchInputHamburger" placeholder="Search posts..." autocomplete="off" />
+                <input type="text" id="searchInputHamburger" placeholder="Search posts..." autocomplete="off">
                 <div id="suggestionsHamburger" class="suggestions"></div>
             </div>
             <a href="all-posts.html">Blog</a>
