--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
 
         <div class="guide-card">
             <a href="./HTML/guide.html">
-            <div class="guide-image">
-                <img src="./assets/norwayfront.jpg" alt="Scenic view of Norway">
-            </div>
-        </a>
+                <div class="guide-image">
+                    <img src="./assets/norwayfront.jpg" alt="Scenic view of Norway">
+                </div>
+            </a>
             <div class="guide-content">
                 <h3>The ultimate guide for traveling to Norway</h3>
                 <p>Majestic fjords, dramatic mountain ranges, and endless natural beauty. From the iconic Northern Lights to the midnight sun</p>
-                <a href="./HTML/guide.html"><button>View Guide</button></a>
+                <a href="./HTML/guide.html" class="button-link">View Guide</a>
             </div>
         </div>
     </main>
