--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -55,16 +55,15 @@
             </div>
         </section>
 
-        <section class="filter-section">
+        <div class="filter-section">
             <button class="filter-btn" data-continent="See all">See all</button>
             <button class="filter-btn" data-continent="Africa">Africa</button>
             <button class="filter-btn" data-continent="Asia">Asia</button>
             <button class="filter-btn" data-continent="Europe">Europe</button>
             <button class="filter-btn" data-continent="Oceania">Oceania</button>
             <button class="filter-btn" data-continent="South America">South America</button>
-            <button class="filter-btn" data-continent="South America">North America</button>
-
-          </section>
+            <button class="filter-btn" data-continent="North America">North America</button>
+        </div>
           
           <div class="filter-hamburger-menu" id="filterHamburgerMenu">
             <span></span>
