--- a/HTML/one-post.html
+++ b/HTML/one-post.html
@@ -18,7 +18,7 @@
     <header>
         <h1 class="logo"><a href="/index.html">Whispers of the World</a></h1>
         <div class="search-bar search-bar-desktop">
-            <input type="text" id="searchInputDesktop" placeholder="Search posts..." autocomplete="off" />
+            <input type="text" id="searchInputDesktop" placeholder="Search posts..." autocomplete="off">
             <div id="suggestionsDesktop" class="suggestions"></div>
         </div>
         <nav class="menu">
@@ -35,7 +35,7 @@
         <div class="side-menu" id="sideMenu">
             <span class="close">&times;</span>
             <div class="search-bar search-bar-hamburger">
-                <input type="text" id="searchInputHamburger" placeholder="Search posts..." autocomplete="off" />
+                <input type="text" id="searchInputHamburger" placeholder="Search posts..." autocomplete="off">
                 <div id="suggestionsHamburger" class="suggestions"></div>
             </div>
             <a href="/HTML/all-posts.html">Blog</a>
