--- a/HTML/about.html
+++ b/HTML/about.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/CSS/about.css">
     <link rel="stylesheet" href="/CSS/header.css">
     <link rel="stylesheet" href="/CSS/footer.css">
+    <script type="module" src="../JS/search.js"></script>
 </head>
 <body>
 
