--- a/HTML/one-post.html
+++ b/HTML/one-post.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../CSS/header.css">
     <link rel="stylesheet" href="../CSS/footer.css">
     <script type="module" src="../JS/post-details.js"></script>
+    <script type="module" src="../JS/search.js"></script>
 </head>
 <body>
    
