--- a/HTML/map.html
+++ b/HTML/map.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css">
     <script type="module" src="../JS/globe.js"></script>
     <script type="module" src="../JS/hamburger.js"></script>
+    <script type="module" src="../JS/search.js"></script>
 </head>
 <body>
     <header>
