--- a/HTML/guide.html
+++ b/HTML/guide.html
@@ -117,7 +117,7 @@
             </div>
         </div>
     </footer>
-    <script src="./JS/hamburger.js"></script>
+    <script src="../JS/hamburger.js"></script>
 
 </body>
 </html>
