--- a/account/register.html
+++ b/account/register.html
@@ -83,6 +83,7 @@
   </div>
 </footer>
   <script src="../JS/register.js"></script>
+  <script src="../JS/hamburger.js"></script>
 </body>
 </html>
 
