--- a/HTML/all-posts.html
+++ b/HTML/all-posts.html
@@ -26,7 +26,7 @@
         <nav class="menu">
             <a href="all-posts.html">Blog</a>
             <a href="/HTML/map.html" class="map-link">Map</a>  
-            <a href="about.html">About</a>
+            <a href="/HTML/about.html">About</a>
             <a href="/account/login.html">Login</a>
         </nav>
         <div class="hamburger">
@@ -42,7 +42,7 @@
             </div>
             <a href="all-posts.html">Blog</a>
             <a href="/HTML/map.html">Map</a> 
-            <a href="">About</a>
+            <a href="/HTML/about.html">About</a>
             <a href="/account/login.html">Login</a>
         </div>
     </header>
