--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             
             <div class="carousel-text">
                 <h1>Let's Wander Together.</h1>
-                <p>Join me as I share personal stories from my travels around the world.</p>
+                <p>Join me as we share personal stories from our travels around the world.</p>
                 <a href="../HTML/all-posts.html" class="explore-button">Explore</a>
             </div>
         </div>
